backup for first graph algo